--- a/src/Docker Compose Prod/docker-compose.prod.yml
+++ b/src/Docker Compose Prod/docker-compose.prod.yml
@@ -41,7 +41,7 @@ services:
       start_period: 20s
 
   web:
-    image: a046363/inf25dw1g31-m3-react:latest
+    image: a046363/inf25dw1g31-m3-react:200
     restart: unless-stopped
     depends_on:
       api:
@@ -57,3 +57,4 @@ services:
 
 volumes:
   db_data:
+
